--- a/layout/footer.html
+++ b/layout/footer.html
@@ -1,22 +1,24 @@
 <div class="container">
     ©2024 Hills Of Stell
-	<!-- -->
+	<!-- 
     <span class="dsb-panel">geometrygame.github.io - <a href="/dmca.html">DMCA</a></span>
-	
+	-->
     <nav class="navbar navbar-expand-lg navbar-light" style="justify-content: right;">
         <!-- <div class=""> -->
             <ul class="navbar-nav">
+			<!--
                 <li class="nav-item active">
                     <a class="nav-link text-white" href="/">Home</a>
                 </li>
+				-->
                 <li class="nav-item">
                     <a class="nav-link text-white" href="/about.html">About Us</a>
                 </li>
-				<!--
+				
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="/contact.html">Contact Us</a>
+                    <a class="nav-link text-white" href="/dmca.html">DMCA</a>
                 </li>
-				-->
+				
                 <li class="nav-item">
                     <a class="nav-link text-white" href="/term.html">Terms and conditions</a>
                 </li>
