--- a/layout/footer.html
+++ b/layout/footer.html
@@ -20,10 +20,10 @@
                 </li>
 				
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="/term.html">Terms and conditions</a>
+                    <a class="nav-link text-white" href="/term.html">Terms</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="/policy.html">Privacy policy</a>
+                    <a class="nav-link text-white" href="/policy.html">Privacy</a>
                 </li>
             </ul>
         <!-- </div> -->
